--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,9 @@
    
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/> 
 
     <application
         android:name=".PushApplication"
